# encoder-server

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  README.md  config.ini  docker-compose.yml  init.sql  main.cpp
configmanager/: configmanager.cpp  configmanager.h
crypto/grasshopper/inc/: grasshopper.h
crypto/grasshopper/src/: grasshopper.cpp
crypto/rsa/bigint/: bigint.cpp  bigint.h
crypto/rsa/rsa/: rsa.cpp  rsa.h
crypto/stribog/inc/: stribog.h  stribog_consts.h
crypto/stribog/src/: stribog.cpp
database/: dbconfig.h  dbdriver.cpp  dbdriver.h
otp/: otp.cpp  otp.h  otp_labels.h
